Added spine to display

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,1 +1,5 @@
 Add HP to tooltips where relevant
+Add labels to tooltips
+
+Add harsh armour gaps as targetable locations, added with checkboxes.
+    - On update, check box. If checked, then make sure location hasn't been added and added. If it's added already, do nothing. If uncheck but the part is present, remove. If unchecked and not present, do nothing.
