--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,10 @@
 Add HP to tooltips where relevant
 Add labels to tooltips
+Add other body types
 
 Add harsh armour gaps as targetable locations, added with checkboxes.
     - On update, check box. If checked, then make sure location hasn't been added and added. If it's added already, do nothing. If uncheck but the part is present, remove. If unchecked and not present, do nothing.
+
+Campaign toggles for...
+    - Rigid armour can take blunt trauma
+    - Edge protection
