Items now provide DR, and this DR is included in the paper doll totals. A few other things are being done in the backend such as sorting and filtering the equipment on the sheet to result in an array of the armour in layering order. But none of this is shown to the user.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,6 @@
 Layered Armour
+    - Octopods don't load DR correctly.
+    - Octopod abdomen DR is a single number?
 
 Add harsh armour gaps as targetable locations, added with checkboxes.
     - Make armour gaps always present and enterable, display based on checkboxes
