Fixed armour display issues for octopods.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,5 @@
 Layered Armour
-    - Octopods don't load DR correctly.
-    - Octopod abdomen DR is a single number?
+    - Macro
 
 Add harsh armour gaps as targetable locations, added with checkboxes.
     - Make armour gaps always present and enterable, display based on checkboxes
