Switched from penalty as a string to front/back penalties as integers. Added weighting based random hit location calculation. There is a warning if an actor needs their body type to be updated. Added WIP combat macros for random location, random torso, general hit location, and specific hit location. All above macros output to WIP method for calculating actual effects. Currently just logs the data it recieves. Updated TODO

--- a/TODO.txt
+++ b/TODO.txt
@@ -2,6 +2,7 @@ Layered Armour
     - Make entering armour faster
     - Slam thingy
     - Make giant fuck-off macro for to-hit
+        - Add section explaining distance and distance penalty
     - Make giant fuck-off macro for active defences
     - Make giant fuck-off macro for damage
 
