--- a/TODO.txt
+++ b/TODO.txt
@@ -23,6 +23,7 @@ Macro
     - Stunning and knockdown (including hit location stuff)
     - Knockback effects
     - Death and unconsciousness checks.
+    - Defence penalty for side/rear
     - Shock penalties
     - AoA (Strong, etc)
     - Add All Out Defence (Double) and (Increased) and figure out how to make double work. (And if double can be a pair of parries/dodges/blocks)
