rollActiveDefence now accounts for facing specific penalties. A warning is provided to the user that a penalty applies, it's also mentioned in the chat message that includes the actual defence roll. Timed Defence is added as an option that only appears when defending against side/rear attacks

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,7 @@
 Current
-    - Facing specific penalties to active defences
+    - Check thigh gap for front/rear
+    - Apply harsh thigh gap setting
+    - check vitals/spine for front/rear, including random rolls
 
 From session 6/10/2021
     - EX/Frag macro
