--- a/TODO.txt
+++ b/TODO.txt
@@ -14,6 +14,7 @@ From session 11/4/2021
 Magic Tab
     - Make affliction chain actually work
     - Set up afflictions so that they know if they're quick contest, basic resistance roll, etc
+    - Make the Rule of X update automatically upon changing the resistance attribute, but only when it's changed (not on updating the sheet)
 
 from session 5/27/2021
     - Brette Mode
